Added more things for the list so it runs smoother and allows for things to be added on. I also moved over some things to a setup method. I am about to start trying to implement the user with the rest of the code so I can see real cases.